# C_cpp_course

./: README.md
ex1-shuvi/: README.md  cipher.c  main.c  main.exe.stackdump  tests.c
ex2-shuvi/: CMakeLists.txt  README.md  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
ex3a-shuvi/: CMakeLists.txt  README.md  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b-shuvi/: README.md  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
ex4-shuvi/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
